<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.5"
            android:gravity="center">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center|bottom"
                app:srcCompat="@drawable/ic_circle_profile" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/margin_16"
            android:layout_marginRight="@dimen/margin_16"
            android:layout_weight="5.5"
            android:orientation="vertical">


            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_signup_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:background="@drawable/edittext_border"
                android:inputType="textEmailAddress"
                android:hint="@string/Email_address"
                android:padding="@dimen/margin_14"
                android:textSize="@dimen/size_txt_14" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/password"
                android:layout_height="wrap_content"
                app:passwordToggleTint="@color/colorPrimaryDark"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="@dimen/margin_16"
                app:hintEnabled="false"
                tools:ignore="SmallSp"
                app:passwordToggleDrawable="@drawable/pass_icon_selector">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edt_signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_border"
                    android:inputType="textPassword"
                    android:hint="@string/Password"
                    android:padding="@dimen/margin_14"
                    android:textSize="@dimen/size_txt_14" />

            </android.support.design.widget.TextInputLayout>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:background="@drawable/button_border"
                android:hint="@string/Sign_up"
                android:padding="@dimen/margin_14"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/size_txt_16"
                android:textStyle="bold" />


        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/grey_border_top"
            android:gravity="center">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txt_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_4"
                android:text="@string/have_account" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvLogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/txt_account"
                android:text="@string/Log_in"
                android:textColor="@color/black" />

        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>