<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">


    <com.jackandphantom.circularimageview.CircleImage
        android:id="@+id/circle_img_profile"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/img_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_more"
        app:layout_constraintBottom_toTopOf="@+id/img_post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/pic_pic"
        app:layout_constraintStart_toEndOf="@+id/circle_img_profile"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/img_post"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="@dimen/margin_8"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@+id/circle_img_profile" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/ic_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/margin_8"
        android:background="@drawable/ic_heart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_post" />


    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/ic_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/margin_8"
        android:background="@drawable/ic_comment"
        app:layout_constraintStart_toEndOf="@+id/ic_like"
        app:layout_constraintTop_toBottomOf="@+id/img_post" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/ic_direct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/margin_8"
        android:background="@drawable/ic_direct"
        app:layout_constraintStart_toEndOf="@+id/ic_comment"
        app:layout_constraintTop_toBottomOf="@+id/img_post" />


    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/ic_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_bookmark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_post" />


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txt_num_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_like" />


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/likes"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/txt_num_likes"
        app:layout_constraintTop_toBottomOf="@+id/ic_comment" />


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="6dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_num_likes" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:text="@string/post_desc"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvUser"
        app:layout_constraintTop_toBottomOf="@+id/textLikes" />
</android.support.constraint.ConstraintLayout>